--- a/estacionamento/templates/estacionamento/adicionar.html
+++ b/estacionamento/templates/estacionamento/adicionar.html
@@ -13,18 +13,20 @@
 </head>
 <body>
     <!-- Menu Superior Transparente -->
-    <header>
-        <div class="logo">
-            <img src="{% static 'img/logo.png' %}" alt="Flanelinha" class="logo-icon">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Nossa página</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#" class="view-btn">Visualizar</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <div class="logo">
+        <img src="{% static 'img/logo.png' %}" alt="Flanelinha" class="logo-icon">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Nossa página</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#" class="view-btn">Visualizar</a></li>
+            <!-- Adicione esta linha -->
+            <li><a href="/admin/" class="admin-btn" title="Acesso Administrativo"><i class="fas fa-lock"></i></a></li>
+        </ul>
+    </nav>
+</header>
     
     <!-- Seção Principal com Imagem de Fundo -->
     <div class="main-content">
