--- a/estacionamento/templates/estacionamento/historico.html
+++ b/estacionamento/templates/estacionamento/historico.html
@@ -14,17 +14,18 @@
 <body>
     <!-- Menu Superior -->
     <header>
-        <div class="logo">
-            <img src="{% static 'img/logo.png' %}" alt="Flanelinha" class="logo-icon">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="{% url 'estacionamento:lista_veiculos' %}">Início</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><button class="view-btn">Visualizar</button></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="logo">
+        <img src="{% static 'img/logo.png' %}" alt="Flanelinha" class="logo-icon">
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Nossa página</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#" class="view-btn">Visualizar</a></li>
+            <li><a href="/admin/" class="admin-btn" title="Acesso Administrativo"><i class="fas fa-lock"></i></a></li>
+        </ul>
+    </nav>
+</header>
     
     <!-- Imagem de Fundo Parcial -->
     <div class="background-container">
