alterações de botões e conexões de rotas

--- a/estacionamento/templates/estacionamento/adicionar.html
+++ b/estacionamento/templates/estacionamento/adicionar.html
@@ -19,9 +19,9 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#">Nossa página</a></li>
+            <li><a href="https://danielrp9.github.io/plano-de-marketing/">Nossa página</a></li>
             <li><a href="#">Contato</a></li>
-            <li><a href="#" class="view-btn">Visualizar</a></li>
+           <li><a href="{% url 'estacionamento:lista_veiculos' %}" class="view-btn">Visualizar</a></li>
             <!-- Adicione esta linha -->
             <li><a href="/admin/" class="admin-btn" title="Acesso Administrativo"><i class="fas fa-lock"></i></a></li>
         </ul>
@@ -123,7 +123,7 @@
             <div class="footer-column">
                 <h3 class="footer-title">Informações</h3>
                 <ul class="footer-list">
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="https://danielrp9.github.io/plano-de-marketing/">Sobre nós</a></li>
                     <li><a href="#">Termos de uso</a></li>
                     <li><a href="#">Política de privacidade</a></li>
                     <li><a href="#">FAQ</a></li>
