--- a/estacionamento/templates/estacionamento/lista.html
+++ b/estacionamento/templates/estacionamento/lista.html
@@ -17,9 +17,8 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#">Nossa página</a></li>
+            <li><a href="{% url 'estacionamento:adicionar_veiculo' %}" class="home-link">Início</a></li>
             <li><a href="#">Contato</a></li>
-            <li><a href="#" class="view-btn">Visualizar</a></li>
             <li><a href="/admin/" class="admin-btn" title="Acesso Administrativo"><i class="fas fa-lock"></i></a></li>
         </ul>
     </nav>
