--- a/estacionamento/templates/estacionamento/historico.html
+++ b/estacionamento/templates/estacionamento/historico.html
@@ -7,8 +7,9 @@
     <title>Histórico de Veículos - Flanelinha</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oswald:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-      <link rel="stylesheet" href="{% static 'css/historico.css' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/historico.css' %}">
 
 </head>
 <body>
@@ -19,7 +20,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#">Nossa página</a></li>
+            <li><a href="{% url 'estacionamento:adicionar_veiculo' %}" class="home-link">Início</a></li>
             <li><a href="#">Contato</a></li>
             <li><a href="/admin/" class="admin-btn" title="Acesso Administrativo"><i class="fas fa-lock"></i></a></li>
         </ul>
