--- a/estacionamento/templates/estacionamento/lista.html
+++ b/estacionamento/templates/estacionamento/lista.html
@@ -7,7 +7,8 @@
     <title>Lista de Veículos - Flanelinha</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oswald:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-       <link rel="stylesheet" href="{% static 'css/lista.css' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'css/lista.css' %}">
 
 </head>
 <body>
