atualização de contagem de vagas

--- a/estacionamento/templates/estacionamento/adicionar.html
+++ b/estacionamento/templates/estacionamento/adicionar.html
@@ -37,7 +37,7 @@
         <div class="vagas-container">
             <div class="vagas-text">No momento temos</div>
             <div class="vagas-content">
-                <div class="vagas-number">120</div>
+                <div class="vagas-number">{{ vagas_disponiveis }}</div>
                 <div class="vagas-words">
                     <div class="vagas-sub">VAGAS</div>
                     <div class="vagas-word">disponíveis</div>
